--- a/ui/browser-extension/manifest.json
+++ b/ui/browser-extension/manifest.json
@@ -22,5 +22,11 @@
       "48": "icons/icon48.png",
       "128": "icons/icon128.png"
     }
-  }
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["dist/src/*.js.map"],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
