--- a/ui/browser-extension/package.json
+++ b/ui/browser-extension/package.json
@@ -24,9 +24,13 @@
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.9.0",
     "prettier": "^3.3.3",
+    "terser-webpack-plugin": "^5.3.10",
     "ts-loader": "^9.5.1",
     "typescript": "5.5.4",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "@extractus/article-extractor": "^8.0.15"
   }
 }
